# EquiGest

./: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  start.sh
alembic/: env.py
alembic/versions/: 17f865ccbb01_add_unique_constraints_in_email_cpf_.py  5855b52152ed_add_payment_status_and_next_payment_.py  a117b1368f9c_.py  c80b7cf03f6b_initial.py  d06f7d662627_change_the_type_of_abacatepay_client_id_.py  d7295eeef4b8_add_abacatepay_client_id_in_usermodel.py
equigest/: app.py  celery.py  settings.py  setup.py  tasks.py
equigest/enums/: enums.py
equigest/infra/: create_models.py  database.py  redis_client.py  session.py
equigest/integrations/abacatepay/: service.py
equigest/integrations/abacatepay/schemas/: create_customer.py
equigest/models/: mares.py  receiving_mare.py  user.py
equigest/routers/: auth.py  mare.py  payment.py
equigest/schemas/: mare.py  query.py  user.py
equigest/services/: exceptions.py  mare.py  user.py
equigest/utils/: mare.py  user.py
equigest/utils/security/: cryptographer.py  hasher.py  oauth_token.py
